Fix spacing for all kind of table (normal, condensed)

--- a/client/app/assets/less/redash/redash-table.less
+++ b/client/app/assets/less/redash/redash-table.less
@@ -44,7 +44,15 @@
   }
 
   tbody > tr:last-child > td {
-    padding-bottom: 7px;
+    padding-bottom: 10px;
+  }
+}
+
+.table-condesed {
+  .table {
+    tbody > tr:last-child > td {
+      padding-bottom: 7px;
+    }
   }
 }
 
